src/test/ui/consts/const-fn-error.stderr
error[E0658]: `for` is not allowed in a `const fn`
  --> $DIR/const-fn-error.rs:5:5
   |
LL | /     for i in 0..x {
LL | |
LL | |
LL | |         sum += i;
LL | |     }
   | |_____^
   |
   = note: see issue #87575 <https://github.com/rust-lang/rust/issues/87575> for more information
   = help: add `#![feature(const_for)]` to the crate attributes to enable

error[E0277]: the trait bound `std::ops::Range<usize>: Iterator` is not satisfied
  --> $DIR/const-fn-error.rs:5:14
   |
LL |     for i in 0..x {
   |              ^^^^ `std::ops::Range<usize>` is not an iterator
   |
   = help: the trait `~const Iterator` is not implemented for `std::ops::Range<usize>`
note: the trait `Iterator` is implemented for `std::ops::Range<usize>`, but that implementation is not `const`
  --> $DIR/const-fn-error.rs:5:14
   |
LL |     for i in 0..x {
   |              ^^^^
   = note: required for `std::ops::Range<usize>` to implement `~const IntoIterator`
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | const fn f(x: usize) -> usize where std::ops::Range<usize>: ~const Iterator {
   |                               +++++++++++++++++++++++++++++++++++++++++++++

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0658.
For more information about an error, try `rustc --explain E0277`.
